fixed layout issues

--- a/css/app.css
+++ b/css/app.css
@@ -549,13 +549,11 @@ video {
   text-decoration: none;
   border-bottom: 1px solid transparent;
   transition: all 100ms;
-  z-index: 10;
 }
 .secondary-li-class-parent-desktop:hover {
   background-color: #d1d5db;
   color: black;
   text-decoration: underline;
-  z-index: 10;
 }
 .group:hover .secondary-li-class-parent-desktop {
   background-color: #f3f4f6;
@@ -573,11 +571,9 @@ video {
   transition: transform 100ms ease-in-out;
   transform-origin: top;
   will-change: transform;
-  z-index: 10;
 }
 .group:hover .hover-background-animation {
   transform: translateX(-50%) scaleY(1);
-  z-index: 10;
 }
 .hover-background-animation a {
   display: block;
@@ -594,7 +590,6 @@ video {
   opacity: 1;
   visibility: visible;
   transition: opacity 100ms ease-in-out 100ms;
-  z-index: 10;
 }
 .static {
   position: static;
@@ -617,14 +612,11 @@ video {
 .-z-1 {
   z-index: -1;
 }
-.z-20 {
-  z-index: 20;
-}
-.-z-1 {
-  z-index: -1;
-}
 .z-1 {
   z-index: 1;
+}
+.z-10 {
+  z-index: 10;
 }
 .m-8 {
   margin: 2rem;
@@ -680,6 +672,9 @@ video {
 .h-6 {
   height: 1.5rem;
 }
+.min-h-\[100vh\] {
+  min-height: 100vh;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -709,9 +704,6 @@ video {
 }
 .max-w-sm {
   max-width: 24rem;
-}
-.flex-grow {
-  flex-grow: 1;
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -842,8 +834,11 @@ video {
 .pt-10 {
   padding-top: 2.5rem;
 }
-.pt-20 {
-  padding-top: 5rem;
+.pt-12 {
+  padding-top: 3rem;
+}
+.pt-16 {
+  padding-top: 4rem;
 }
 .text-center {
   text-align: center;
@@ -1126,9 +1121,15 @@ video {
     font-weight: 700;
     font-style: normal;
 }
+main {
+  margin: 0px;
+  padding: 0px;
+}
 body.custom-background {
     position: relative;
-    
+    height: 100%;
+    transition: height 1s cubic-bezier(0.25, 0.8, 0.25, 1);
+    /* min-height: 100vh; */
 }
 body.custom-background::before {
     content: '';
@@ -1137,9 +1138,24 @@ body.custom-background::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
-    pointer-events: none; /* Allow interaction with the body content */
+    background-color: rgba(0, 0, 0, 0.9); /* Adjust the opacity as needed */
     z-index: -2; /* Ensure the overlay is behind the content */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 1.2);
+}
+.border-shadow {
+    position: relative;
+    z-index: -2;
+  }
+.border-shadow::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 5px; /* Adjust the height as needed */
+    pointer-events: none; /* Allow interaction with the container content */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.9); /* Adjust the shadow size and color */
+    z-index: -2; /* Ensure the shadow is behind the content */
 }
 article>*:not(.entry-content),
 .entry-content>* {
@@ -1232,21 +1248,6 @@ article>*:not(.entry-content),
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
-.border-shadow {
-    position: relative;
-    z-index: -2;
-  }
-.border-shadow::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    pointer-events: none; /* Allow interaction with the container content */
-    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.9); /* Adjust the shadow size and color */
-    z-index: -2; /* Ensure the shadow is behind the content */
-  }
 .group:hover .group-hover\:h-full {
   height: 100%;
 }
@@ -1350,6 +1351,10 @@ article>*:not(.entry-content),
 
   .lg\:pl-10 {
     padding-left: 2.5rem;
+  }
+
+  .lg\:pt-24 {
+    padding-top: 6rem;
   }
 
   .lg\:font-teko {
