--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -49,13 +49,11 @@
  text-decoration: none;
  border-bottom: 1px solid transparent;
  transition: all 100ms;
- z-index: 10;
 }
 .secondary-li-class-parent-desktop:hover {
  background-color: #d1d5db;
  color: black;
  text-decoration: underline;
- z-index: 10;
 }
 .group:hover .secondary-li-class-parent-desktop {
  background-color: #f3f4f6;
@@ -73,11 +71,9 @@
  transition: transform 100ms ease-in-out;
  transform-origin: top;
  will-change: transform;
- z-index: 10;
 }
 .group:hover .hover-background-animation {
  transform: translateX(-50%) scaleY(1);
- z-index: 10;
 }
 .hover-background-animation a {
  display: block;
@@ -94,7 +90,6 @@
  opacity: 1;
  visibility: visible;
  transition: opacity 100ms ease-in-out 100ms;
- z-index: 10;
 }
 .static {
  position: static;
@@ -120,17 +115,8 @@
 .z-1 {
  z-index: 1;
 }
-.z-20 {
- z-index: 20;
-}
-.z-0 {
- z-index: 0;
-}
-.-z-1 {
- z-index: -1;
-}
-.-z-0 {
- z-index: 0;
+.z-10 {
+ z-index: 10;
 }
 .m-8 {
  margin: 2rem;
@@ -186,6 +172,9 @@
 .h-6 {
  height: 1.5rem;
 }
+.min-h-\[100vh\] {
+ min-height: 100vh;
+}
 .min-h-screen {
  min-height: 100vh;
 }
@@ -215,9 +204,6 @@
 }
 .max-w-sm {
  max-width: 24rem;
-}
-.flex-grow {
- flex-grow: 1;
 }
 .transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -348,8 +334,11 @@
 .pt-10 {
  padding-top: 2.5rem;
 }
-.pt-20 {
- padding-top: 5rem;
+.pt-12 {
+ padding-top: 3rem;
+}
+.pt-16 {
+ padding-top: 4rem;
 }
 .text-center {
  text-align: center;
@@ -615,6 +604,15 @@ body {
  }
  .lg\:pl-10 {
   padding-left: 2.5rem;
+ }
+ .lg\:pt-20 {
+  padding-top: 5rem;
+ }
+ .lg\:pt-28 {
+  padding-top: 7rem;
+ }
+ .lg\:pt-24 {
+  padding-top: 6rem;
  }
  .lg\:font-teko {
   font-family: Teko, sans-serif;
